@@ -1,21 +1,20 @@
 package graduation.first.oauth.entity;
 
+import graduation.first.user.domain.User;
 import lombok.Getter;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
-import org.springframework.security.core.userdetails.User;
-import org.springframework.security.crypto.factory.PasswordEncoderFactories;
 
 import java.io.Serializable;
-import java.util.List;
+import java.util.Collections;
 
 @Getter
-public class UserAdapter extends User implements Serializable {
-    private graduation.first.user.domain.User user;
+public class UserAdapter extends UserPrincipal implements Serializable {
 
-    public UserAdapter(graduation.first.user.domain.User user) {
+    public UserAdapter(User user) {
         super(user.getUserId(),
                 user.getPassword(),
-                List.of(new SimpleGrantedAuthority(user.getRole().toString())));
-        this.user = user;
+                user.getProvider(),
+                user.getRole(),
+                Collections.singletonList(new SimpleGrantedAuthority(user.getRole().getCode())));
     }
 }
